# procedural-3d-maze

./: .gitignore  AGENTS.md  DEBUG_CHECK.md  DESKTOP_BUILD.md  FINAL_UPDATE.md  README.md  TESTING.md  TESTING_GUIDE.md  autoPilot.js  camera.js  claude-code-instruction.md  debug-hub.html  diagnostic.html  enemy-lab.html  gameLoop.js  index.html  level-lab.html  llm-provider-tooling-instruction.md  monster.js  monsterAI.js  monsterTypes.js  package-lock.json  package.json  pathfinding.js  playerController.js  result.md  result2.md  result3.md  result4.md  test-ai.html  test-basic.html  test-enemy-meta.html  test-map.js  test-minimap.html  test-model.html  test-roommap.html  vite.config.js
.claude/: settings.local.json
.github/workflows/: desktop-windows.yml  desktop.yml
docs/: AI_ALGO_NOTES.md  AI_SYSTEM.md  CHANGELOG.md  GAME_DESIGN.md  GLOSSARY.md  GLOSSARY_中英術語.md  README.md  TECH_DESIGN.md  TODO.md  UI_INVENTORY.md  enemy-meta.md  monster-movement-plan.md
docs/assistant/: AI.md  ARCHITECTURE.md  CONTENT_SYSTEMS.md  README.md  RENDERING_PERFORMANCE.md
public/audio/: README.md
public/level-recipes/: classrooms-basic.json  labs-stealth.json  manifest.json
public/levels/: l1-tutorial.json  l10-ritual-circuit.json  l11-powered-keypad.json  l2-keycard.json  (+29 more)
scripts/: check-desktop-env.js  dev.md  install-desktop-deps-ubuntu.sh  install-rust.sh  levels-new.js  levels-sync.js  sync-models.js  tauri-build.js  test-room-generation.js  validate-levels.js
src/: main.js
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: main.rs
(+176 files in other folders)
